@@ -146,16 +146,15 @@ public class Vertex2D extends Vertex
 	}
 	
 	/**
-	 * Return the 2D centroid of a list of vertices.
+	 * Move to the 2D centroid of a list of vertices.
 	 *
 	 * @param v array
-	 * @return the 2D centroid of these vertices.
 	 */
-	public static Vertex2D centroid(Mesh2D m, Vertex2D [] v)
+	public void centroid(Vertex2D [] v)
 	{
 		double x = 0.0, y = 0.0;
 		if (v.length == 0)
-			return (Vertex2D) m.createVertex(0.0, 0.0);
+			return;
 		for (int i = 0; i < v.length; i++)
 		{
 			double [] p = v[i].getUV();
@@ -164,7 +163,7 @@ public class Vertex2D extends Vertex
 		}
 		x /= v.length;
 		y /= v.length;
-		return (Vertex2D) m.createVertex(x, y);
+		moveTo(x, y);
 	}
 	
 	/**
