@@ -9,6 +9,9 @@ Sun Nov 11 22:53:19 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 	  src/org/jcae/mesh/amibe/patch/Calculus.java: Rename distance()
 	into distance2(), this method now returns square distance to
 	avoid unnecessary calls to Math.sqrt().
+	* src/org/jcae/mesh/amibe/patch/Vertex2D.java: Modify centroid()
+	method to not return a new instance, but instead move current
+	instance.
 
 Sun Nov 11 01:45:43 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
